welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: ')' expected but integer literal found.
if (Buggle 1 estFaceMur() )
           ^Program:1: error: illegal start of simple expression
if (Buggle 1 estFaceMur() )
                          ^